<resources>
    <string name="app_name">Skynie</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skynie">Skynie</string>
    <string name="from_blockbusters_to_indie_films_discover_and_book_cinema_tickets_with_ease">From blockbusters to indie films, discover and book cinema tickets with ease.</string>
    <string name="to_experience_the_benefits">to experience the benefits</string>
    <string name="explore_now">Explore now</string>
    <string name="get_started">Get Started</string>
    <string name="romance_emoji">💕</string>
    <string name="action_emoji">💥</string>
    <string name="new_mystery_pg_13_1h_56m">NEW · Mystery · PG-13 · 1h 56m</string>
    <string name="featured_movie_banner">Featured Movie Banner</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string name="play">Play</string>
    <string name="trailer">Trailer</string>
    <string name="more_info">More Info</string>
    <string name="now_showing">Now Showing</string>
    <string name="more">More ›</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="movie_poster2">Movie Poster</string>
    <string name="comming_soon1">Comming Soon</string>
    <string name="more1">More ›</string>
    <string name="coming_soon_poster">Coming Soon Poster</string>
    <string name="new22">New</string>
    <string name="new222">New</string>
    <string name="new2222">New</string>
    <string name="new22222">New</string>
    <string name="genres">Genres</string>
    <string name="all">All ›</string>
    <string name="advent_emoji">🎭</string>
    <string name="adventure">Adventure</string>
    <string name="comedy_emoji">😂</string>
    <string name="comedy">Comedy</string>
    <string name="romance">Romance</string>
    <string name="action">Action</string>
    <string name="new_animation_sci_film">NEW · Animation · Sci-film</string>
    <string name="_8_9_10_imdb">8.9/10 IMDB</string>
    <string name="loca">Loca</string>
    <string name="our_pick">Our Pick</string>
    <string name="_13">+13</string>
    <string name="pk">PK</string>
    <string name="new23">New</string>
    <string name="arrival">Arrival</string>
    <string name="back">Back</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="test_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="test_your_password">Enter your password</string>
    <string name="forget_password">Forget password?</string>
    <string name="or">Or</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_otp">Enter the email associated with your account and we\'ll send an email with code to reset your password</string>
    <string name="confirm">Confirm</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="fp_otp_msg">Enter your OTP which has been sent to your email and completely verify your account</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="code_msg">A code has been sent to your phone</string>
    <string name="film_fav">film_fav</string>
    <string name="cast_photo">cast_photo</string>
    <string name="share">Share</string>
    <string name="menu">Menu</string>
    <string name="dot"> • </string>
    <string name="biography">Biography</string>
    <string name="pg">PG-13</string>
    <string name="duration">3h 6min</string>
    <string name="rating_13">+13</string>
    <string name="see_more">See More...</string>
    <string name="rating_count">4.5 (250K Reviews)</string>
    <string name="rotten_tomatoes">Rotten Tomatoes</string>
    <string name="film_description">During World War II, an American intelligence officer is assigned to work on the Manhattan Project, a top-secret research and development effort that designed and produced the first nuclear weapons during World War II. The film stars Cillian Murphy as J. Robert Oppenheimer, the theoretical physicist who was the director of the Los Alamos Laboratory, and therefore the scientist most directly responsible for the design and production of the atomic bomb.</string>
    <string name="videos">Videos</string>
    <string name="director">Director</string>
    <string name="director_name">Cillian Murphy, Emily Blunt</string>
    <string name="writer">Writer</string>
    <string name="writer_list">Cillian Murphy, Emily Blunt, Matt Dillon</string>
    <string name="stars">Stars</string>
    <string name="you_may_also_like">You may also like</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="tickets">Tickets</string>
    <string name="video_item">Video item</string>
    <string name="actor_name">Cillian Murphy</string>
    <string name="character_name">J. Robert Oppenheimer</string>
    <string name="movie_title">Oppenheimer</string>
    <string name="theater_location">07 St. San Diego Blvd, Jumeirah</string>
    <string name="location_arrow">Location arrow</string>
    <string name="oppenheimer">Oppenheimer</string>
    <string name="en">EN</string>
    <string name="sub_en_fr">Sub EN/FR</string>
    <string name="christopher_nolan">Christopher Nolan</string>
    <string name="_80">80%</string>
    <string name="play_trailer">▶ Trailer</string>
    <string name="stars_90_mall">STARS (90°Mall)</string>
    <string name="month">TUE</string>
    <string name="_12">12</string>
    <string name="imax">IMAX</string>
    <string name="screenx">ScreenX</string>
    <string name="dolby_atmos">Dolby Atmos</string>
    <string name="time_random">10:15</string>
    <string name="hall_1">Hall 1</string>
    <string name="_53">53</string>
    <string name="slash">/</string>
    <string name="_70">70</string>
    <string name="_96">96%</string>
    <string name="cornpass">CornPass</string>
    <string name="imdb">IMDB</string>
    <string name="imdb_logo">imdb_logo</string>
    <string name="screen_x">Screen X</string>
    <string name="screen">SCREEN</string>
    <string name="booked">Booked</string>
    <string name="yours">Yours</string>
    <string name="available">Available</string>
    <string name="no_seat_selected">No seats selected</string>
    <string name="total_price_zero">Total: Rs. 0</string>
    <string name="proceed_to_cash_out">Proceed to Cash Out</string>
    <string name="theater">Theater</string>
    <string name="hall">Hall</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="personal_information">Personal information</string>
    <string name="language">Language</string>
    <string name="english_us">English (US)</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="notifications">Notifications</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="promotional_notifications">Promotional Notifications</string>
    <string name="log_out">Log Out</string>
    <string name="more_heading">More</string>
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID_HERE</string>
    <string name="facebook_app_id">1488885262815213</string>
    <string name="fb_login_protocol_scheme">fb1488885262815213</string>
    <string name="josephine_clark">Josephine Clark</string>
    <string name="a1">A1</string>
</resources>