<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="110dp"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/button_grey_bg"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/tv_format_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screenx"
        android:textColor="@color/text_secondary"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_showtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/time_random"
        android:textColor="@color/text_primary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_hall_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/hall_1"
        android:textColor="@color/text_secondary"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_seats_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/_53"
            android:textColor="@color/availability_color"
            android:textSize="9sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/slash"
            android:textColor="@color/availability_color"
            android:textSize="9sp" />

        <TextView
            android:id="@+id/tv_total_seats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/_70"
            android:textColor="@color/availability_color"
            android:textSize="9sp" />
    </LinearLayout>

</LinearLayout>