<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1a1a1a"
    android:id="@+id/main"
    android:padding="20dp">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/logo"
        android:scaleType="fitCenter"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"/>

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skynie"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="bold"
        android:letterSpacing="0.05"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="100dp"  />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/log_in"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@drawable/button_red_background"
        android:layout_marginBottom="20dp" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/sign_up"
        android:textColor="@color/accent_red"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@drawable/button_red_outline"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginBottom="20dp">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#333333" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="#666666"
            android:textSize="12sp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#333333" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:spacing="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/googleButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/google"
            android:drawableLeft="@drawable/ic_google"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:background="@drawable/button_outline_background"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginEnd="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/facebookButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/facebook"
            android:drawableLeft="@drawable/ic_facebook"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:background="@drawable/button_outline_background"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />


    </LinearLayout>


</LinearLayout>