<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1B1B">

    <!-- full screen ka pichay anay wala background Dark Grid Tiles Image -->

    <ImageView
        android:id="@+id/iv_bg_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_onboarding"
        android:scaleType="centerCrop"
        android:contentDescription="@null" />


    <LinearLayout
        android:id="@+id/ll_bottom_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="48dp"
        android:layout_alignParentBottom="true">


        <TextView
            android:id="@+id/tv_heading_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explore_now"
            android:textColor="#FFFFFF"
            android:textSize="23sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />


        <TextView
            android:id="@+id/tv_heading_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_experience_the_benefits"
            android:textColor="#FFFFFF"
            android:textSize="23sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp" />


        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_blockbusters_to_indie_films_discover_and_book_cinema_tickets_with_ease"
            android:textColor="#CCFFFFFF"
            android:textSize="14sp"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="28dp" />



        <Button
            android:id="@+id/btn_get_started"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/get_started"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:backgroundTint="#E53935"
            android:stateListAnimator="@null" />

    </LinearLayout>

</RelativeLayout>